--- a/mitigia-task/src/main/resources/application.properties
+++ b/mitigia-task/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=MitigiaPass
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.datasource.driver-classname=org.mariadb.jdbc.Driver
