--- a/mitigia-task/src/main/resources/application.properties
+++ b/mitigia-task/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=mitigia-task
-spring.datasource.url=jdbc:mariadb://localhost:3306/Mitigia
+spring.datasource.url=jdbc:mariadb://mariadb:3306/Mitigia
 spring.datasource.username=root
 spring.datasource.password=MitigiaPass
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.datasource.driver-classname=org.mariadb.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
